# MCC_VoxelyzeExecutor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
vxa/: neuralNetExample.vxa  neuralNetExample_5x5.vxa  test_11x11.vxa
